# weekydevia

./: Cargo.toml  README.md
draft/: TEMPLATE.md
draft/20240527_20240602/: README.md  _design-pattern.md  programming-language.md  project.md  tooling.md  web.md
draft/20240529_20240602/: README.md  programming-language.md  web.md
draft/20240603_20240609/: README.md  _database.md  _design-pattern.md  _devops.md  _opinion.md  _perfopt.md  _windows.md  programming-language.md  web.md
draft/20240610_20240616/: README.md  _database.md  _design-pattern.md  devops.md  embedded-software.md  programming-language.md  web.md
draft/20240617_20240707/: README.md  _conf.md  _cxx.md  _erlixir.md  _go.md  _php.md  _security.md  _wasm.md  _weekly.md  _zig.md  devops.md  rust.md  web.md
draft/20240708_20240914/: _cpp.md  _go.md  _rust.md  _wasm.md  _zig.md
draft/20240708_20240915/: README.md  _cpp.md  _database.md  _devops.md  _elixir.md  _jsts.md  _rust.md  _wasm.md  _web.md  _zig.md
draft/20240915_20241005/: README.md  _cpp.md  _go.md  _web.md  _zig.md
release/: feed.xml
release/20240527_20240602/: README.md  programming-language.md  web.md
release/20240529_20240602/: README.md  programming-language.md  project.md  tooling.md  web.md
release/20240603_20240609/: README.md  programming-language.md  web.md
release/20240610_20240616/: README.md  cxx.md  erlixir.md  programming-language.md  rust.md  web.md
release/20240617_20240707/: README.md  devops.md  rust.md  web.md
scripts/: release  release.ps1
tool/: chan.rs  cli.rs  error.rs  feed.rs  lib.rs  template.rs
(+34 files in other folders)
